# winter2025_ece5532_examples

./: LICENSE  README.md
basic_ros_example/: CMakeLists.txt  package.xml  setup.py
basic_ros_example/scripts/basic_ros_example/: service_advertiser.py  service_client.py  topic_publisher.py
basic_ros_example/src/: service_advertiser.cpp  service_client.cpp  topic_publisher.cpp
cpp_example/: CMakeLists.txt  Factorial.cpp  Factorial.hpp  factorial_example.cpp  mult_example.cpp  package.xml
dead_reckoning_odom/: CMakeLists.txt  package.xml
dead_reckoning_odom/launch/: dead_reckoning_bag_test.launch  dead_reckoning_sim_test.launch
dead_reckoning_odom/rviz/: rviz_config.rviz
dead_reckoning_odom/src/: DeadReckoningOdom.cpp  DeadReckoningOdom.hpp  dead_reckoning_node.cpp
dead_reckoning_odom/urdf/: roundbot_gps_sim.urdf.xacro
diff_drive_example/: CMakeLists.txt  package.xml  setup.py
diff_drive_example/scripts/diff_drive_example/: diff_drive_example.py
diff_drive_example/src/: diff_drive_example.cpp
gnss_ekf_example/cfg/: GnssEkfExample.cfg
gnss_ekf_example/rviz/: rviz_config.rviz
gnss_ekf_example/src/: GnssEkfExample.cpp
gps_example/: CMakeLists.txt  package.xml  setup.py
gps_example/launch/: gps_example.launch
gps_example/rviz/: gps_example.rviz
gps_example/scripts/gps_example/: gps_example.py
gps_example/src/: ecef_utm_comparison.cpp  gps_example.cpp
gps_example/urdf/: audibot_gps_sim.urdf.xacro
imu_ekf_example/: CMakeLists.txt  package.xml
imu_ekf_example/cfg/: ImuEkfExample.cfg
imu_ekf_example/launch/: imu_ekf_example.launch
imu_ekf_example/rviz/: rviz_config.rviz
imu_ekf_example/src/: ImuEkfExample.cpp  ImuEkfExample.hpp  imu_ekf_example.cpp
mantis_model/: CMakeLists.txt  package.xml
mantis_model/cfg/: MantisPlugin.cfg
mantis_model/launch/: mantis_gazebo.launch
mantis_model/src/: DcMotorSim.cpp  DcMotorSim.hpp  MantisInterfacePlugin.cpp  MantisInterfacePlugin.hpp  MotorController.cpp  MotorController.hpp
mantis_model/urdf/: mantis.urdf  mantis_gazebo.urdf
marker_example/: CMakeLists.txt  package.xml  setup.py
marker_example/cfg/: MarkerExample.cfg
marker_example/scripts/marker_example/: marker_example_node.py  tf_broadcaster.py
marker_example/src/: marker_example.cpp  tf_broadcaster.cpp
maze_world_nav/: CMakeLists.txt  map.pgm  map.yaml  package.xml
maze_world_nav/launch/: ground_truth_navigation.launch  localization.launch  sim_bringup.launch  slam_navigation.launch
maze_world_nav/rviz/: rviz_config.rviz  slam_rviz_config.rviz
maze_world_nav/yaml/: amcl_params.yaml  global_costmap_params.yaml  global_costmap_params_static_map.yaml  global_planner_params.yaml  hector_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
opencv_example/: CMakeLists.txt  package.xml
opencv_example/cfg/: HoughTransform.cfg
opencv_example/launch/: hough_transform_example.launch
opencv_example/src/: HoughTransform.cpp  HoughTransform.hpp  hough_transform_node.cpp
py_example/: CMakeLists.txt  package.xml
py_example/scripts/: factorial.py  mult_example.py
real_slam_example/: CMakeLists.txt  package.xml
real_slam_example/launch/: map_building.launch
real_slam_example/rviz/: hector_config.rviz
real_slam_example/yaml/: hector_params.yaml
ros_namespace_example/: CMakeLists.txt  package.xml  setup.py
ros_namespace_example/scripts/ros_namespace_example/: namespace_example.py
ros_namespace_example/src/: namespace_example.cpp
ros_param_example/: CMakeLists.txt  package.xml  setup.py
ros_param_example/cfg/: ReconfigExample.cfg
ros_param_example/launch/: static_param.launch  static_param_yaml.launch
ros_param_example/scripts/ros_param_example/: reconfig_example.py  static_param_example.py
ros_param_example/src/: reconfig_example.cpp  static_param_example.cpp
ros_param_example/yaml/: param_values.yaml
ros_time_example/: CMakeLists.txt  package.xml  setup.py
ros_time_example/launch/: launch_example.launch
ros_time_example/scripts/ros_time_example/: time_stamp_example.py  timer_example.py
ros_time_example/src/: time_stamp_example.cpp  timer_example.cpp
rosbag_example/: CMakeLists.txt  package.xml
rosbag_example/src/: DataGeneratorNode.cpp  DataGeneratorNode.hpp  TimeAnalysisNode.cpp  TimeAnalysisNode.hpp  data_generator_node.cpp  time_analysis_node.cpp
roundbot_local_planner/: CMakeLists.txt  package.xml  plugin.xml
roundbot_local_planner/include/roundbot_local_planner/: RoundbotLocalPlanner.hpp
roundbot_local_planner/src/: RoundbotLocalPlanner.cpp
sparkfun_imu_driver/: CMakeLists.txt  package.xml  setup.py
sparkfun_imu_driver/launch/: data_collection.launch
sparkfun_imu_driver/scripts/sparkfun_imu_driver/: driver_node.py
static_tf_example/: CMakeLists.txt  package.xml
static_tf_example/launch/: static_tf.launch
static_tf_example/rviz/: rviz_config.rviz
transform_examples/: CMakeLists.txt  package.xml
transform_examples/src/: example1_eigen.cpp  example1_tf.cpp  example2_eigen.cpp  example2_tf.cpp
urdf_example/: CMakeLists.txt  package.xml  setup.py
urdf_example/launch/: urdf_example.launch
urdf_example/scripts/urdf_example/: example_joint_publisher.py
urdf_example/urdf/: example.urdf
