<?xml version="1.0"?>
<package format="3">
  <name>basic_ros_example</name>
  <version>0.0.0</version>
  <description>
    Some basic ROS example nodes
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>