<?xml version="1.0"?>
<package format="3">
  <name>dead_reckoning_odom</name>
  <version>0.0.0</version>
  <description>
    Integrate speed and yaw rate into a dead reckoning localization estimate
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

</package>
