<?xml version="1.0"?>
<package format="3">
  <name>diff_drive_example</name>
  <version>0.0.0</version>
  <description>
    Implementation of differential drive kinematics
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>