<?xml version="1.0"?>
<package format="3">
  <name>gps_example</name>
  <version>0.0.0</version>
  <description>
    Example of how to convert GPS coordinates from geodetic to ENU and UTM
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>gps_common</depend>
  <depend>geodesy</depend>

</package>
