<?xml version="1.0"?>
<package format="3">
  <name>marker_example</name>
  <version>0.0.0</version>
  <description>
    Example of how to use Rviz markers
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

</package>
