<?xml version="1.0"?>
<package format="3">
  <name>maze_world_nav</name>
  <version>0.0.0</version>
  <description>
    Launch configuration for maze world navigation in Gazebo
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>move_base</exec_depend>
</package>
