<?xml version="1.0"?>
<package format="3">
  <name>opencv_example</name>
  <version>0.0.0</version>
  <description>
    Basic examples of using OpenCV with ROS
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>

  <exec_depend>image_transport</exec_depend>

</package>
