<?xml version="1.0"?>
<package format="3">
  <name>real_slam_example</name>
  <version>0.0.0</version>
  <description>
    Launch configuration for running hector_mapping on real data from a bag file
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hector_mapping</exec_depend>

</package>
