<?xml version="1.0"?>
<package format="3">
  <name>roundbot_local_planner</name>
  <version>0.0.0</version>
  <description>
    Local planner plugin to move_base to directly follow a global plan
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>costmap_2d</depend>
  <depend>tf2_ros</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>angles</depend>

  <export>
    <nav_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
