<?xml version="1.0"?>
<package format="3">
  <name>static_tf_example</name>
  <version>0.0.0</version>
  <description>
    Example for publishing static TF frames from a launch file
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
