<?xml version="1.0"?>
<package format="3">
  <name>transform_examples</name>
  <version>0.0.0</version>
  <description>
    Examples of how to calculate coordinate transformations in C++.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
